--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.7",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.44.4",
     "highlight.js": "11.10.0"
   }
 }
