--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'australia-southeast1-docker.pkg.dev/concrete-setup-429807-v6/ito4002/sveltejs-app:latest', '/client']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/my-project/ito5002/sveltejs-app:$COMMIT_SHA', './client']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'australia-southeast1-docker.pkg.dev/concrete-setup-429807-v6/ito4002/sveltejs-app:latest']
+    args: ['push', 'us-central1-docker.pkg.dev/my-project/ito5002/sveltejs-app:$COMMIT_SHA']
 
 images:
-  - 'australia-southeast1-docker.pkg.dev/concrete-setup-429807-v6/ito4002/sveltejs-app'
+  - 'us-central1-docker.pkg.dev/my-project/ito5002/sveltejs-app:$COMMIT_SHA'
 
 options:
   logging: CLOUD_LOGGING_ONLY
