--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview --host"
   },
   "devDependencies": {
+    "@beyonk/svelte-mapbox": "^9.1.1",
     "@skeletonlabs/skeleton": "2.10.1",
     "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-auto": "^3.0.0",
