--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.7",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@stripe/stripe-js": "^4.1.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
     "highlight.js": "11.10.0"
