--- a/server/payment-service/Dockerfile
+++ b/server/payment-service/Dockerfile
@@ -11,11 +11,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Make port 5000 available to the world outside this container
-EXPOSE 8080
-
 # Define environment variable
 ENV FLASK_APP=payment-api.py
+ENV PORT=8080
+
+# Make port 8080 available to the world outside this container
+EXPOSE 8080
 
 # Run app.py when the container launches
-CMD ["python", "payment-api.py"]
+CMD ["sh", "-c", "python -m flask run --host=0.0.0.0 --port=${PORT}"]
