--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "0.5.13",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.39",
+    "supabase": "^1.187.10",
     "svelte": "^4.2.7",
     "tailwindcss": "3.4.4",
     "vite": "^5.0.3",
@@ -29,6 +30,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
-    "highlight.js": "11.10.0"
+    "highlight.js": "11.10.0",
+    "uuid": "^10.0.0"
   }
 }
